# rust-acm

./: .gitignore  Cargo.toml  README.md
euler/1-50/: p1.rs  p10.rs  p11.rs  p12.rs  p13.rs  p2.rs  p3.rs  p4.rs  p5.rs  p6.rs  p7.rs  p8.rs  p9.rs
script/: doc.header.html  doc.sh
src/: lib.rs
src/algorithm/: prime.rs
src/collection/: pair.rs
