[package]
name = "main"
version = "0.1.0"
edition = "2018"
authors = ["lemon-clown"]

[dependencies]

# euler project
[[bin]]
name = "euler-1"
path = "euler/1-50/p1.rs"

[[bin]]
name = "euler-2"
path = "euler/1-50/p2.rs"

[[bin]]
name = "euler-3"
path = "euler/1-50/p3.rs"

[[bin]]
name = "euler-4"
path = "euler/1-50/p4.rs"

[[bin]]
name = "euler-5"
path = "euler/1-50/p5.rs"

[[bin]]
name = "euler-6"
path = "euler/1-50/p6.rs"
