[package]
name = "rust-acm"
version = "0.1.0"
edition = "2018"
authors = ["lemon-clown"]

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./script/doc.header.html" ]

[dependencies]

# euler project
[[bin]]
name = "euler-1"
path = "euler/1-50/p1.rs"

[[bin]]
name = "euler-2"
path = "euler/1-50/p2.rs"

[[bin]]
name = "euler-3"
path = "euler/1-50/p3.rs"

[[bin]]
name = "euler-4"
path = "euler/1-50/p4.rs"

[[bin]]
name = "euler-5"
path = "euler/1-50/p5.rs"

[[bin]]
name = "euler-6"
path = "euler/1-50/p6.rs"

[[bin]]
name = "euler-7"
path = "euler/1-50/p7.rs"

[[bin]]
name = "euler-8"
path = "euler/1-50/p8.rs"

[[bin]]
name = "euler-9"
path = "euler/1-50/p9.rs"
